Sources/Codex/Path/Parsing/PathParser.swift
// Generated from Sources/Codex/PathParsing/Path.g4 by ANTLR 4.13.2
@preconcurrency import Antlr4

open class PathParser: Parser {

	internal static let _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = PathParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(PathParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()

	internal static let _sharedContextCache = PredictionContextCache()

	public
	enum Tokens: Int {
		case EOF = -1, ROOT = 1, CURRENT = 2, MEMBER_ACC = 3, DESC_ACC = 4, WILDCARD = 5, 
                 FILTER = 6, COLON = 7, SEMI = 8, OPEN_BRACKET = 9, CLOSE_BRACKET = 10, 
                 OPEN_PAREN = 11, CLOSE_PAREN = 12, COMMA = 13, EXCLAMATION_MARK = 14, 
                 LOGICAL_AND = 15, LOGICAL_OR = 16, CMP_EQ = 17, CMP_NE = 18, 
                 CMP_GT = 19, CMP_GE = 20, CMP_LT = 21, CMP_LE = 22, TRUE = 23, 
                 FALSE = 24, NULL = 25, BLANK = 26, INT = 27, DIGIT1 = 28, 
                 NUMBER = 29, SQOT = 30, DQOT = 31, FUNC_NAME = 32, NAME = 33, 
                 SQ_STRING = 34, DQ_STRING = 35
	}

	public
	static let RULE_pathQuery = 0, RULE_segments = 1, RULE_segment = 2, RULE_childSegment = 3, 
            RULE_descendantSegment = 4, RULE_selector = 5, RULE_nameSelector = 6, 
            RULE_wildcardSelector = 7, RULE_indexSelector = 8, RULE_sliceSelector = 9, 
            RULE_filterSelector = 10, RULE_memberNameShorthand = 11, RULE_name = 12, 
            RULE_slice = 13, RULE_start = 14, RULE_end = 15, RULE_step = 16, 
            RULE_bracketedSelection = 17, RULE_logicalExpr = 18, RULE_logicalOrExpr = 19, 
            RULE_logicalAndExpr = 20, RULE_basicExpr = 21, RULE_parenExpr = 22, 
            RULE_logicalNotOp = 23, RULE_testExpr = 24, RULE_filterQuery = 25, 
            RULE_relQuery = 26, RULE_comparisonExpr = 27, RULE_literal = 28, 
            RULE_nullLiteral = 29, RULE_boolLiteral = 30, RULE_intLiteral = 31, 
            RULE_numLiteral = 32, RULE_comparable = 33, RULE_comparisonOp = 34, 
            RULE_singularQuery = 35, RULE_relSingularQuery = 36, RULE_absSingularQuery = 37, 
            RULE_singularQuerySegments = 38, RULE_nameSegment = 39, RULE_indexSegment = 40, 
            RULE_stringLiteral = 41, RULE_functionName = 42, RULE_functionExpr = 43, 
            RULE_functionArgument = 44, RULE_s = 45

	public
	static let ruleNames: [String] = [
		"pathQuery", "segments", "segment", "childSegment", "descendantSegment", 
		"selector", "nameSelector", "wildcardSelector", "indexSelector", "sliceSelector", 
		"filterSelector", "memberNameShorthand", "name", "slice", "start", "end", 
		"step", "bracketedSelection", "logicalExpr", "logicalOrExpr", "logicalAndExpr", 
		"basicExpr", "parenExpr", "logicalNotOp", "testExpr", "filterQuery", "relQuery", 
		"comparisonExpr", "literal", "nullLiteral", "boolLiteral", "intLiteral", 
		"numLiteral", "comparable", "comparisonOp", "singularQuery", "relSingularQuery", 
		"absSingularQuery", "singularQuerySegments", "nameSegment", "indexSegment", 
		"stringLiteral", "functionName", "functionExpr", "functionArgument", "s"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'$'", "'@'", "'.'", "'..'", "'*'", "'?'", "':'", "';'", "'['", "']'", 
		"'('", "')'", "','", "'!'", "'&&'", "'||'", "'=='", "'!='", "'>'", "'>='", 
		"'<'", "'<='", "'true'", "'false'", "'null'", nil, nil, nil, nil, "'''", 
		"'\"'"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "ROOT", "CURRENT", "MEMBER_ACC", "DESC_ACC", "WILDCARD", "FILTER", 
		"COLON", "SEMI", "OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_PAREN", "CLOSE_PAREN", 
		"COMMA", "EXCLAMATION_MARK", "LOGICAL_AND", "LOGICAL_OR", "CMP_EQ", "CMP_NE", 
		"CMP_GT", "CMP_GE", "CMP_LT", "CMP_LE", "TRUE", "FALSE", "NULL", "BLANK", 
		"INT", "DIGIT1", "NUMBER", "SQOT", "DQOT", "FUNC_NAME", "NAME", "SQ_STRING", 
		"DQ_STRING"
	]
	public
	static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	override open
	func getGrammarFileName() -> String { return "Path.g4" }

	override open
	func getRuleNames() -> [String] { return PathParser.ruleNames }

	override open
	func getSerializedATN() -> [Int] { return PathParser._serializedATN }

	override open
	func getATN() -> ATN { return PathParser._ATN }


	override open
	func getVocabulary() -> Vocabulary {
	    return PathParser.VOCABULARY
	}

	override public
	init(_ input:TokenStream) throws {
	    RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,PathParser._ATN,PathParser._decisionToDFA, PathParser._sharedContextCache)
	}


	public class PathQueryContext: ParserRuleContext {
			open
			func ROOT() -> TerminalNode? {
				return getToken(PathParser.Tokens.ROOT.rawValue, 0)
			}
			open
			func segments() -> SegmentsContext? {
				return getRuleContext(SegmentsContext.self, 0)
			}
			open
			func EOF() -> TerminalNode? {
				return getToken(PathParser.Tokens.EOF.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PathParser.RULE_pathQuery
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.enterPathQuery(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.exitPathQuery(self)
			}
		}
	}
	@discardableResult
	 open func pathQuery() throws -> PathQueryContext {
		var _localctx: PathQueryContext
		_localctx = PathQueryContext(_ctx, getState())
		try enterRule(_localctx, 0, PathParser.RULE_pathQuery)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(92)
		 	try match(PathParser.Tokens.ROOT.rawValue)
		 	setState(93)
		 	try segments()
		 	setState(94)
		 	try match(PathParser.Tokens.EOF.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class SegmentsContext: ParserRuleContext {
			open
			func segment() -> [SegmentContext] {
				return getRuleContexts(SegmentContext.self)
			}
			open
			func segment(_ i: Int) -> SegmentContext? {
				return getRuleContext(SegmentContext.self, i)
			}
		override open
		func getRuleIndex() -> Int {
			return PathParser.RULE_segments
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.enterSegments(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.exitSegments(self)
			}
		}
	}
	@discardableResult
	 open func segments() throws -> SegmentsContext {
		var _localctx: SegmentsContext
		_localctx = SegmentsContext(_ctx, getState())
		try enterRule(_localctx, 2, PathParser.RULE_segments)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(99)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 536) != 0)) {
		 		setState(96)
		 		try segment()


		 		setState(101)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class SegmentContext: ParserRuleContext {
			open
			func childSegment() -> ChildSegmentContext? {
				return getRuleContext(ChildSegmentContext.self, 0)
			}
			open
			func descendantSegment() -> DescendantSegmentContext? {
				return getRuleContext(DescendantSegmentContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PathParser.RULE_segment
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.enterSegment(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.exitSegment(self)
			}
		}
	}
	@discardableResult
	 open func segment() throws -> SegmentContext {
		var _localctx: SegmentContext
		_localctx = SegmentContext(_ctx, getState())
		try enterRule(_localctx, 4, PathParser.RULE_segment)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(104)
		 	try _errHandler.sync(self)
		 	switch (PathParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .MEMBER_ACC:fallthrough
		 	case .OPEN_BRACKET:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(102)
		 		try childSegment()

		 		break

		 	case .DESC_ACC:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(103)
		 		try descendantSegment()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class ChildSegmentContext: ParserRuleContext {
			open
			func bracketedSelection() -> BracketedSelectionContext? {
				return getRuleContext(BracketedSelectionContext.self, 0)
			}
			open
			func MEMBER_ACC() -> TerminalNode? {
				return getToken(PathParser.Tokens.MEMBER_ACC.rawValue, 0)
			}
			open
			func wildcardSelector() -> WildcardSelectorContext? {
				return getRuleContext(WildcardSelectorContext.self, 0)
			}
			open
			func memberNameShorthand() -> MemberNameShorthandContext? {
				return getRuleContext(MemberNameShorthandContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PathParser.RULE_childSegment
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.enterChildSegment(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.exitChildSegment(self)
			}
		}
	}
	@discardableResult
	 open func childSegment() throws -> ChildSegmentContext {
		var _localctx: ChildSegmentContext
		_localctx = ChildSegmentContext(_ctx, getState())
		try enterRule(_localctx, 6, PathParser.RULE_childSegment)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(112)
		 	try _errHandler.sync(self)
		 	switch (PathParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .OPEN_BRACKET:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(106)
		 		try bracketedSelection()

		 		break

		 	case .MEMBER_ACC:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(107)
		 		try match(PathParser.Tokens.MEMBER_ACC.rawValue)
		 		setState(110)
		 		try _errHandler.sync(self)
		 		switch (PathParser.Tokens(rawValue: try _input.LA(1))!) {
		 		case .WILDCARD:
		 			setState(108)
		 			try wildcardSelector()

		 			break
		 		case .TRUE:fallthrough
		 		case .FALSE:fallthrough
		 		case .NULL:fallthrough
		 		case .FUNC_NAME:fallthrough
		 		case .NAME:
		 			setState(109)
		 			try memberNameShorthand()

		 			break
		 		default:
		 			throw ANTLRException.recognition(e: NoViableAltException(self))
		 		}

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class DescendantSegmentContext: ParserRuleContext {
			open
			func DESC_ACC() -> TerminalNode? {
				return getToken(PathParser.Tokens.DESC_ACC.rawValue, 0)
			}
			open
			func bracketedSelection() -> BracketedSelectionContext? {
				return getRuleContext(BracketedSelectionContext.self, 0)
			}
			open
			func wildcardSelector() -> WildcardSelectorContext? {
				return getRuleContext(WildcardSelectorContext.self, 0)
			}
			open
			func memberNameShorthand() -> MemberNameShorthandContext? {
				return getRuleContext(MemberNameShorthandContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PathParser.RULE_descendantSegment
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.enterDescendantSegment(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.exitDescendantSegment(self)
			}
		}
	}
	@discardableResult
	 open func descendantSegment() throws -> DescendantSegmentContext {
		var _localctx: DescendantSegmentContext
		_localctx = DescendantSegmentContext(_ctx, getState())
		try enterRule(_localctx, 8, PathParser.RULE_descendantSegment)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(114)
		 	try match(PathParser.Tokens.DESC_ACC.rawValue)
		 	setState(118)
		 	try _errHandler.sync(self)
		 	switch (PathParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .OPEN_BRACKET:
		 		setState(115)
		 		try bracketedSelection()

		 		break

		 	case .WILDCARD:
		 		setState(116)
		 		try wildcardSelector()

		 		break
		 	case .TRUE:fallthrough
		 	case .FALSE:fallthrough
		 	case .NULL:fallthrough
		 	case .FUNC_NAME:fallthrough
		 	case .NAME:
		 		setState(117)
		 		try memberNameShorthand()

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class SelectorContext: ParserRuleContext {
			open
			func nameSelector() -> NameSelectorContext? {
				return getRuleContext(NameSelectorContext.self, 0)
			}
			open
			func wildcardSelector() -> WildcardSelectorContext? {
				return getRuleContext(WildcardSelectorContext.self, 0)
			}
			open
			func indexSelector() -> IndexSelectorContext? {
				return getRuleContext(IndexSelectorContext.self, 0)
			}
			open
			func sliceSelector() -> SliceSelectorContext? {
				return getRuleContext(SliceSelectorContext.self, 0)
			}
			open
			func filterSelector() -> FilterSelectorContext? {
				return getRuleContext(FilterSelectorContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PathParser.RULE_selector
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.enterSelector(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.exitSelector(self)
			}
		}
	}
	@discardableResult
	 open func selector() throws -> SelectorContext {
		var _localctx: SelectorContext
		_localctx = SelectorContext(_ctx, getState())
		try enterRule(_localctx, 10, PathParser.RULE_selector)
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(125)
		 	try _errHandler.sync(self)
		 	switch(try getInterpreter().adaptivePredict(_input,5, _ctx)) {
		 	case 1:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(120)
		 		try nameSelector()

		 		break
		 	case 2:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(121)
		 		try wildcardSelector()

		 		break
		 	case 3:
		 		try enterOuterAlt(_localctx, 3)
		 		setState(122)
		 		try indexSelector()

		 		break
		 	case 4:
		 		try enterOuterAlt(_localctx, 4)
		 		setState(123)
		 		try sliceSelector()

		 		break
		 	case 5:
		 		try enterOuterAlt(_localctx, 5)
		 		setState(124)
		 		try filterSelector()

		 		break
		 	default: break
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class NameSelectorContext: ParserRuleContext {
			open
			func stringLiteral() -> StringLiteralContext? {
				return getRuleContext(StringLiteralContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PathParser.RULE_nameSelector
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.enterNameSelector(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.exitNameSelector(self)
			}
		}
	}
	@discardableResult
	 open func nameSelector() throws -> NameSelectorContext {
		var _localctx: NameSelectorContext
		_localctx = NameSelectorContext(_ctx, getState())
		try enterRule(_localctx, 12, PathParser.RULE_nameSelector)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(127)
		 	try stringLiteral()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class WildcardSelectorContext: ParserRuleContext {
			open
			func WILDCARD() -> TerminalNode? {
				return getToken(PathParser.Tokens.WILDCARD.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PathParser.RULE_wildcardSelector
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.enterWildcardSelector(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.exitWildcardSelector(self)
			}
		}
	}
	@discardableResult
	 open func wildcardSelector() throws -> WildcardSelectorContext {
		var _localctx: WildcardSelectorContext
		_localctx = WildcardSelectorContext(_ctx, getState())
		try enterRule(_localctx, 14, PathParser.RULE_wildcardSelector)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(129)
		 	try match(PathParser.Tokens.WILDCARD.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class IndexSelectorContext: ParserRuleContext {
			open
			func INT() -> TerminalNode? {
				return getToken(PathParser.Tokens.INT.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PathParser.RULE_indexSelector
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.enterIndexSelector(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.exitIndexSelector(self)
			}
		}
	}
	@discardableResult
	 open func indexSelector() throws -> IndexSelectorContext {
		var _localctx: IndexSelectorContext
		_localctx = IndexSelectorContext(_ctx, getState())
		try enterRule(_localctx, 16, PathParser.RULE_indexSelector)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(131)
		 	try match(PathParser.Tokens.INT.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class SliceSelectorContext: ParserRuleContext {
			open
			func slice() -> SliceContext? {
				return getRuleContext(SliceContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PathParser.RULE_sliceSelector
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.enterSliceSelector(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.exitSliceSelector(self)
			}
		}
	}
	@discardableResult
	 open func sliceSelector() throws -> SliceSelectorContext {
		var _localctx: SliceSelectorContext
		_localctx = SliceSelectorContext(_ctx, getState())
		try enterRule(_localctx, 18, PathParser.RULE_sliceSelector)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(133)
		 	try slice()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class FilterSelectorContext: ParserRuleContext {
			open
			func FILTER() -> TerminalNode? {
				return getToken(PathParser.Tokens.FILTER.rawValue, 0)
			}
			open
			func s() -> SContext? {
				return getRuleContext(SContext.self, 0)
			}
			open
			func logicalExpr() -> LogicalExprContext? {
				return getRuleContext(LogicalExprContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PathParser.RULE_filterSelector
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.enterFilterSelector(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.exitFilterSelector(self)
			}
		}
	}
	@discardableResult
	 open func filterSelector() throws -> FilterSelectorContext {
		var _localctx: FilterSelectorContext
		_localctx = FilterSelectorContext(_ctx, getState())
		try enterRule(_localctx, 20, PathParser.RULE_filterSelector)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(135)
		 	try match(PathParser.Tokens.FILTER.rawValue)
		 	setState(136)
		 	try s()
		 	setState(137)
		 	try logicalExpr()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class MemberNameShorthandContext: ParserRuleContext {
			open
			func name() -> NameContext? {
				return getRuleContext(NameContext.self, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PathParser.RULE_memberNameShorthand
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.enterMemberNameShorthand(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.exitMemberNameShorthand(self)
			}
		}
	}
	@discardableResult
	 open func memberNameShorthand() throws -> MemberNameShorthandContext {
		var _localctx: MemberNameShorthandContext
		_localctx = MemberNameShorthandContext(_ctx, getState())
		try enterRule(_localctx, 22, PathParser.RULE_memberNameShorthand)
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(139)
		 	try name()

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}

	public class NameContext: ParserRuleContext {
			open
			func NAME() -> TerminalNode? {
				return getToken(PathParser.Tokens.NAME.rawValue, 0)
			}
			open
			func FUNC_NAME() -> TerminalNode? {
				return getToken(PathParser.Tokens.FUNC_NAME.rawValue, 0)
			}
			open
			func TRUE() -> TerminalNode? {
				return getToken(PathParser.Tokens.TRUE.rawValue, 0)
			}
			open
			func FALSE() -> TerminalNode? {
				return getToken(PathParser.Tokens.FALSE.rawValue, 0)
			}
			open
			func NULL() -> TerminalNode? {
				return getToken(PathParser.Tokens.NULL.rawValue, 0)
			}
		override open
		func getRuleIndex() -> Int {
			return PathParser.RULE_name
		}
		override open
		func enterRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.enterName(self)
			}
		}
		override open
		func exitRule(_ listener: ParseTreeListener) {
			if let listener = listener as? PathListener {
				listener.exitName(self)
			}
		}
	}
	@discardableResult
	 open func name() throws -> NameContext {
		var _localctx: NameContext
		_localctx = NameContext(_ctx, getState())
		try enterRule(_localctx, 24, PathParser.RULE_name)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(141)
		 	_la = try _input.LA(1)
		 	if (!(((Int64(_la) & ~0x3f) == 0 && ((Int64(1) << _la) & 12943622144) != 0))) {
		 	try _errHandler.recoverInline(self)
		 	}
		 	else {
		 		_errHandler.reportMatch(self)
		 		try consume()
		 	}

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
